[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Ville Jouppi <jope@jope.fi>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
flask = "^2.2.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
